# ChangeLog for app-misc/ringtonetools
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/ringtonetools/Attic/ChangeLog,v 1.7 2005/01/01 15:21:00 eradicator Exp $

  05 Oct 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  ringtonetools-2.18.ebuild:
  Masked ringtonetools-2.18.ebuild stable for ppc

  03 Aug 2004; David Holm <dholm@gentoo.org> ringtonetools-2.18.ebuild:
  Added to ~ppc.

*ringtonetools-2.18 (15 Nov 2003)

  15 Nov 2003; Adrian Almenar <strider@gentoo.org> ringtonetools-2.18.ebuild:
  First import to cvs of ringtonetools.
  - This closes bug #15162. thanks to Rigo Ketelings <rigo@home.nl> for sending
  and ebuild for it, it had a couple of lines better handled than my first
  version.
