@@ -1,4 +1,6 @@
 MD5 05a21d41133226d15d2a9d3506f4d014 ChangeLog 770
 MD5 dac1049948f02514e6d7e18d46552368 metadata.xml 817
 MD5 858c2bf68dd659611f386a59905b738f ringtonetools-2.18.ebuild 664
+MD5 3880ce2393e000d45e90af6bf594bf01 ringtonetools-2.23.ebuild 670
 MD5 c40a96a71133bdefbf34425ae712ffef files/digest-ringtonetools-2.18 69
+MD5 cd8e37aec51a49ca41c79aaf35457b05 files/digest-ringtonetools-2.23 69
