@@ -1,6 +1,12 @@
 # ChangeLog for app-misc/ringtonetools
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/ringtonetools/Attic/ChangeLog,v 1.7 2005/01/01 15:21:00 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/ringtonetools/Attic/ChangeLog,v 1.8 2005/03/13 06:02:47 chriswhite Exp $
+
+*ringtonetools-2.23 (13 Mar 2005)
+
+  13 Mar 2005; Chris White <chriswhite@gentoo.org>
+  +ringtonetools-2.23.ebuild:
+  Fixed security bug #74700.  Marked ppc and x86 stable.
 
   05 Oct 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
   ringtonetools-2.18.ebuild:
